cutycapt (20110104) lenny squeeze intrepid karmic lucid maverick; urgency=low

  * Fixed build depedency on debian/control.

 -- Manuel Rego Casasnovas <mrego@igalia.com>  Mon, 04 Jan 2011 10:40:00 +0100

cutycapt (20110103) lenny squeeze intrepid karmic lucid maverick; urgency=low

  * Updated to upstream.

 -- Manuel Rego Casasnovas <mrego@igalia.com>  Mon, 03 Jan 2011 16:51:12 +0100

cutycapt (20100108) lenny squeeze intrepid karmic; urgency=low

  * Initial packaged release.

 -- Adrian Perez <aperez@igalia.com>  Fri, 08 Jan 2009 12:25:00 +0200