@@ -1,3 +1,9 @@
+cutycapt (20110104.1) lenny squeeze intrepid karmic lucid maverick; urgency=low
+
+  * Fixed debian/rules thanks to a patch by Adrian Perez <aperez@igalia.com>.
+
+ -- Manuel Rego Casasnovas <mrego@igalia.com>  Mon, 04 Jan 2011 12:43:00 +0100
+
 cutycapt (20110104) lenny squeeze intrepid karmic lucid maverick; urgency=low
 
   * Fixed build depedency on debian/control.
